--- a/css/dialog.css
+++ b/css/dialog.css
@@ -3,6 +3,7 @@
     max-height:450px;
     border:1px solid black;
     padding:20px;
+    background: white;
 }
 .dialog_container .more {
     width:100%;
