--- a/css/taskCreate.css
+++ b/css/taskCreate.css
@@ -4,7 +4,7 @@
     width:45%;
     vertical-align: top;
     overflow:auto;
-    height:100%;
+    height:80%;
 }
 #phrasesCont div input {
     width: 80%;
@@ -19,7 +19,7 @@
 #keywords {
     position:absolute;
     left:45%;
-    top:0;
+    top:50px;
     display: inline-block;
     width:45%;
     vertical-align: top;
