--- a/css/history.css
+++ b/css/history.css
@@ -41,3 +41,9 @@
     display: inline-block;
     vertical-align: middle;
 }
+#description {
+    width:400px;
+    height:100px;
+    margin-top:20px;
+    margin-left:20px;
+}
