--- a/css/tree.css
+++ b/css/tree.css
@@ -1,5 +1,14 @@
 #TreeContainer {
     width:95%;
+    margin-top:25px;
+}
+#TreeContainer .controls {
+    position:fixed;
+    background: white;
+    top:45px;
+    width:100%;
+    margin:0;
+    padding:5px;
 }
 #TreeContainer .controls .button{
     width:20px;
@@ -18,6 +27,12 @@
 }
 #TreeContainer .controls .plus{
     background: url('../images/plus_small.png');
+}
+#TreeContainer .controls .assign_author{
+    background: url('../images/pin.png');
+}
+#TreeContainer .controls .delete_keys{
+    background: url('../images/delete_keys.png');
 }
 #TreeContainer .controls .plus{
     background: url('../images/plus_small.png');
@@ -99,4 +114,3 @@
 #TreeContainer .buttonContainer .dragButton{
     background: url('../images/expand_small.png');
 }
-
