Added comments to tasks

--- a/css/tree.css
+++ b/css/tree.css
@@ -114,3 +114,6 @@
 #TreeContainer .buttonContainer .dragButton{
     background: url('../images/expand_small.png');
 }
+#TreeContainer .comment.hidden {
+    display:none;
+}
