--- a/css/tree.css
+++ b/css/tree.css
@@ -43,6 +43,9 @@
 #TreeContainer .controls .delete{
     background: url('../images/cross_small.png');
 }
+#TreeContainer .controls .copy_to_author {
+    background: url('../images/copy_small.png');
+}
 #TreeContainer ul{
     list-style-type: none;
     padding-left:0px;
@@ -113,9 +116,6 @@
 }
 #TreeContainer .buttonContainer .dragButton{
     background: url('../images/expand_small.png');
-}
-#TreeContainer .buttonContainer .copy_to_author {
-    background: url('../images/copy_small.png');
 }
 #TreeContainer .comment.hidden {
     display:none;
