Added highlight to handedIn and QHandedIn taks

--- a/css/tree.css
+++ b/css/tree.css
@@ -120,3 +120,10 @@
 #TreeContainer .comment.hidden {
     display:none;
 }
+
+#TreeContainer .handedIn {
+    background-color: rgba(114, 255, 10, 0.56);
+}
+#TreeContainer .QHandedIn {
+    background-color: rgba(17, 85, 255, 0.56);
+}
